2006-04-01  Alexander Malysh <amalysh at kannel.org>
  * gwlib/octstr.c: fixed octstr_delete_matching. Don't know how it
    worked before?!?

2006-03-28  Alexander Malysh <amalysh at kannel.org>
  * gw/smsbox.c: applied patch fixes race condition for the case when
    immediate-sendsms-reply=false (which is default). In this case we
    put uuid into store dictionary after we sent message to bearerbox.
    Then another thread which does read_from_bearerbox tried to delete
    not yet existant uuid from store dirctionary which leads to stale
    sendsms clients.
    Thanks to Dziugas Baltrunas <dziugas at gmail.com> for patch.
    [Msg-Id: <943470880603231203hd97b1e5nffff4c8b2c455358@mail.gmail.com>]

2006-03-28  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_http.c: patch sets the smsc_id in incoming messages.
    Otherwise, they are unable to be routed (smsbox_list empty).
    Thanks to Rene Kluwen <rene.kluwen at chimit.nl>.
    [Msg-Id: <AFEHKJODIBGCKGHIDIPHIEBJCBAA.rene.kluwen@chimit.nl>]

2006-03-28  Alexander Malysh <amalysh at kannel.org>
  * gw/shared.[ch], gw/smsbox.c, gw/wapbox.c, utils/mtbatch.c: changed
    call interface to read_from_box so that we can set timeout and
    differentiate error from timeout. See #321.

2006-03-24  Stipe Tolj  <stolj at kannel.org>
  * wap/wsp.h, wap/wsp_strings.def: adding new WSP 1.6 headers. NLC.

2006-03-23  Alexander Malysh <amalysh at kannel.org>
  * gwlib/http.c: fixed non conformance to RFC when client sends wrong request
    we just closed socket. With this change we return HTTP 400 Bad request error.
    Thanks to Dziugas Baltrunas <dziugas at gmail.com> for pointing to this.

2006-03-23  Alexander Malysh <amalysh at kannel.org>
  * gw/bb_boxc.c: fixed compiler warning in function when using 64bit system.
    Thanks to Vincent CHAVANIS <vincent at telemaque.fr> for pointing to this.

2006-03-23  Alexander Malysh <amalysh at kannel.org>